@@ -186,7 +186,7 @@
 	</extension>
 </addon>
 
-<addon id="service.playitx" name="PlayIt" version="0.6.2"
+<addon id="service.playitx" name="PlayIt" version="0.6.3"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
